// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooComponent should allow generating snapshot 1`] = `
<foo
  condition1={[Function Boolean]}
  condition2="false"
  value1={[Function Function]}
  value2={[Function Function]}
>
  <p>
    Line 1
  </p><div>
    <div>
       val1 
    </div>
  </div>
</foo>
`;

exports[`FooComponent should allow generating snapshot 2`] = `
<div
  id="root1"
>
  <p>
    Line 1
  </p>
  <div>
    <div>
       val1 
    </div>
    
    
  </div>
</div>
`;

exports[`FooComponent should allow generating snapshot with removed component attributes with snapshot serializer option 1`] = `
<foo>
  <p>
    Line 1
  </p><div>
    <div>
       val1 
    </div>
  </div>
</foo>
`;

exports[`FooComponent should allow generating snapshot with removed component attributes with snapshot serializer option 2`] = `
<div
  id="root0"
>
  <p>
    Line 1
  </p>
  <div>
    <div>
       val1 
    </div>
    
    
  </div>
</div>
`;
